# python_freetype

./: README  freetype.py  freetype2.py  setup.cfg  setup.py
util/: gen_errors.c
