[metadata]
platform = Linux
classifiers =
    Programming Language :: Python :: 3.2
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: Fonts

[bdist_wheel]
python-tag = py32
#plat-name = linux
